# Daemora

./: .dockerignore  .env.example  .gitignore  .npmignore  AUDIT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLAN.md  README.md  SECURITY.md  SOUL.md  VISION.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.build.json  tsconfig.json  vitest.config.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
config/: hooks.json  mcp.json
crew/: README.md
crew/_template/: index.js  plugin.json
crew/analyst/: plugin.json
crew/api/: plugin.json
crew/architect/: plugin.json
crew/assistant/: plugin.json
crew/backend/: plugin.json
crew/browser-pilot/: plugin.json
crew/coder/: plugin.json
crew/coordinator/: plugin.json
crew/database/: plugin.json
crew/database-connector/: index.js
crew/db-architect/: plugin.json
crew/designer/: plugin.json
crew/desktop-control/: index.js  plugin.json
crew/devops/: plugin.json
crew/editor/: plugin.json
crew/facebook/: plugin.json
crew/frontend/: plugin.json
crew/github/: plugin.json
crew/gmail/: plugin.json
crew/google-calendar/: plugin.json
crew/google-services/: index.js  plugin.json
crew/imessage/: index.js  plugin.json
crew/instagram/: plugin.json
crew/investigator/: plugin.json
crew/linkedin/: plugin.json
crew/media-creator/: index.js  plugin.json
crew/meeting-attendant/: plugin.json
crew/notifications/: index.js  plugin.json
crew/notion/: index.js  plugin.json
crew/planner/: plugin.json
crew/project-lead-coding/: index.js  plugin.json
crew/project-lead-research/: index.js  plugin.json
crew/reddit/: plugin.json
crew/researcher/: plugin.json
crew/reviewer/: plugin.json
crew/security/: plugin.json
crew/smart-home/: index.js  plugin.json
crew/ssh-remote/: index.js  plugin.json
crew/strategist/: plugin.json
crew/sysadmin/: plugin.json
crew/system-monitor/: index.js  plugin.json
crew/tester/: plugin.json
crew/tiktok/: plugin.json
crew/translator/: plugin.json
crew/twitter/: index.js  plugin.json
crew/video-editor/: index.js  plugin.json
crew/writer/: plugin.json
crew/youtube/: plugin.json
daemora-ui/: README.md  index.html  package.json  vite.config.ts
desktop/: plan.md
desktop/app/: package.json
desktop/app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
desktop/app/src-tauri/capabilities/: default.json
desktop/app/src-tauri/frontend/: index.html
desktop/app/src-tauri/icons/: icon.icns
desktop/app/src-tauri/src/: commands.rs  keychain.rs  lib.rs  main.rs  splash.js  supervisor.rs  tray.rs
desktop/sidecar/: README.md  bootstrap.sh  pyproject.toml
desktop/sidecar/daemora_sidecar/: audit.py  config.py  daemora_llm.py  desktop.py  main.py  voice_agent.py  voice_config.py  voice_providers.py  voice_providers_local.py  wake_word.py
docs/: agents.md  channels.md  cli.md  configuration.md  dashboard.md  getting-started.md  index.md  mcp.md  multi-tenant.md  plugins.md  scheduling.md  security.md  tools.md  voice-meetings.md
plugins/database-connector/: index.js  plugin.json
plugins/google-services/: index.js  plugin.json
plugins/imessage/: index.js  plugin.json
plugins/notifications/: index.js  plugin.json
plugins/smart-home/: index.js  plugin.json
plugins/ssh-remote/: index.js  plugin.json
skills/: api-development.md  apple-notes.md  apple-reminders.md  browser.md  camsnap.md  coding-agent.md  coding.md  content-research-writer.md  create-new-skill.md  data-analysis.md  debugging.md  devops.md  discord-ops.md  documents.md  email.md  gif-search.md  github.md  google-workspace.md  healthcheck.md  image-enhancer.md  image-gen.md  link-understanding.md  macos-automation.md  meeting-attendance.md  model-usage.md  obsidian.md  orchestration.md  pdf-editing.md  pdf.md  planning.md  remotion.md  research.md  skill-creator.md  slack-ops.md  spotify.md  summarize.md  system-admin.md  things.md  tmux.md  trello.md  (+3 more)
skills/_template/: SKILL.md
skills/apple-notes/: SKILL.md
skills/apple-reminders/: SKILL.md
skills/camsnap/: SKILL.md
skills/coding-agent/: SKILL.md
skills/discord/: SKILL.md
skills/example-pdf/: SKILL.md
skills/github/: SKILL.md
skills/model-usage/: SKILL.md
skills/notion/: SKILL.md
skills/obsidian/: SKILL.md
skills/planning/: SKILL.md
skills/rich-document-creator/: SKILL.md
skills/slack/: SKILL.md
skills/summarize/: SKILL.md
skills/task-decomposition/: SKILL.md
skills/things-mac/: SKILL.md
skills/tmux/: SKILL.md
skills/trello/: SKILL.md
skills/video-frames/: SKILL.md
skills/video-script-writer/: SKILL.md
skills/weather/: SKILL.md
src/: cli.js  index.js  systemPrompt.js
src/a2a/: A2AClient.js  A2AServer.js  AgentCard.js
src/agents/: ContractBuilder.js  Mailbox.js  SubAgentManager.js  Supervisor.js  TeamManager.js  TeamTaskList.js  systemPrompt.js
tests/: auth.smoke.test.ts  embeddings.smoke.test.ts  hooks.smoke.test.ts  skills.smoke.test.ts  smoke-12.ts  watchers.smoke.test.ts  webhooks.smoke.test.ts
ui/: package-lock.json  package.json
(+622 files in other folders)
