[project]
name = "daemora-sidecar"
version = "0.1.0"
description = "Desktop control + voice pipeline sidecar for Daemora"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pyautogui>=0.9.54",
  "pillow>=11.0",
  "mss>=10.0",
  "pydantic>=2.9",
  "httpx>=0.28",
]

[project.optional-dependencies]
voice = [
  "livekit>=0.19",
  "livekit-agents>=0.12",
  "livekit-plugins-silero>=0.7",
  "livekit-plugins-openai>=0.10",
  "faster-whisper>=1.0",
  "piper-tts>=1.2",
  "openwakeword>=0.6",
  "sounddevice>=0.5",
  "numpy>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["daemora_sidecar"]
