[project]
name = "daemora-sidecar"
version = "0.1.0"
description = "Desktop control + voice pipeline sidecar for Daemora"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pyautogui>=0.9.54",
  "pillow>=11.0",
  "mss>=10.0",
  "pydantic>=2.9",
  "httpx>=0.28",
]

[project.optional-dependencies]
voice = [
  # LiveKit pipeline — provider-agnostic, plugins below
  "livekit>=1.1.5",
  "livekit-agents>=1.5.2",
  # VAD — local, always on-device (needed for turn detection)
  "livekit-plugins-silero>=1.5.2",
  # STT provider plugins — installed for selection; user picks one in first-run wizard
  "livekit-plugins-deepgram>=1.5.2",
  "livekit-plugins-openai>=1.5.2",
  "livekit-plugins-groq>=1.5.2",
  "livekit-plugins-google>=1.5.2",
  "livekit-plugins-assemblyai>=1.5.2",
  # TTS provider plugins — same
  "livekit-plugins-elevenlabs>=1.5.2",
  "livekit-plugins-cartesia>=1.5.2",
  # Wake word — local, always on-device (cost + privacy — can't stream mic to cloud 24/7)
  "openwakeword>=0.6",
  # Audio I/O
  "sounddevice>=0.5",
  "numpy>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["daemora_sidecar"]
