[package]
name = "daemora-desktop"
version = "0.1.0"
edition = "2021"
description = "Daemora Desktop — voice-first AI agent"
authors = ["Daemora"]

[lib]
name = "daemora_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
rand = "0.9"
log = "0.4"
env_logger = "0.11"
portpicker = "0.1"
which = "7"
libc = "0.2"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
